added nav header and logo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 		<title> Black Light Propaganda</title>
 	</head>
 	<body>
+	<header>
+		<img src="images/bplogo.jpg">
+		<nav>
+			<ul>
+				<li> Home </li>
+				<li> About </li>
+				<li> Contact Us </li>
+			</ul>
+		</nav>
+	</header>
+	
 		<p> example. </p>
 	</body>
 </html>
