adjusted logo width and height

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 	<header>
-		<img src="images/bplogo.jpg">
+		<img src="images/bplogo.jpg" width="8%" height="8%">
 		<nav>
 			<ul>
 				<li> Home </li>
