added about section

--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
 		<nav>
 			<ul>
 				<li> Home </li>
-				<li> About </li>
+				<li> Gallery </li>
 				<li> Contact Us </li>
 			</ul>
 		</nav>
 	</header>
 	
-		<p> example. </p>
+		<p> We are a company that focuses directly on attracting more customers to our 
+		clients' businesses through the proper advertisement techniques. Our company 
+		specializes on: flyers, business cards, promotional ads, menus, posters, 
+		photography and almost anything you could think of that relates to graphic 
+		advertisement and media. Blacklight Propaganda has been exploiting the market 
+		for local businesses, and we have found that both our clients and our clients' 
+		customers truly appreciate our work. We're an up and coming company based out 
+		of Southwest Florida. Blacklight Propaganda was founded by Santiago Zabaleta 
+		and AJ Hill in mid 2010. </p>
+		
 	</body>
 </html>
