added links to nav

--- a/index.html
+++ b/index.html
@@ -9,22 +9,30 @@
 		<img src="images/bplogo.jpg" width="8%" height="8%">
 		<nav>
 			<ul>
-				<li> Home </li>
-				<li> Gallery </li>
-				<li> Contact Us </li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
 	</header>
 	
+	<section>
+		<img src="images/aj_santi.jpg">
+		<h1> Blacklight Propaganda </h1>
 		<p> We are a company that focuses directly on attracting more customers to our 
 		clients' businesses through the proper advertisement techniques. Our company 
 		specializes on: flyers, business cards, promotional ads, menus, posters, 
 		photography and almost anything you could think of that relates to graphic 
-		advertisement and media. Blacklight Propaganda has been exploiting the market 
-		for local businesses, and we have found that both our clients and our clients' 
-		customers truly appreciate our work. We're an up and coming company based out 
-		of Southwest Florida. Blacklight Propaganda was founded by Santiago Zabaleta 
-		and AJ Hill in mid 2010. </p>
-		
+		advertisement and media.<strong> Blacklight Propaganda </strong> has been 
+		exploiting the market for local businesses, and we have found that both our 
+		clients and our clients' customers truly appreciate our work. We're an up and 
+		coming company based out of Southwest Florida. Blacklight Propaganda was founded 
+		by Santiago Zabaleta and AJ Hill in mid 2010. </p>
+	</section>
+	
+	<footer>
+		<p> &copy;2009- 2012 Blacklight Propaganda, Inc. All Rights Reserved.</p>
+	</footer>
+	
 	</body>
 </html>
