added all images to gallery.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lan="eng">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<title> Black Light Propaganda</title>
 	</head>
 	<body>
 	<header>
-		<img src="images/bplogo.jpg" width="8%" height="8%">
+		<img src="images/bplogo.jpg" alt="BP logo" title="BP logo" width="100" height="100">
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -17,7 +17,7 @@
 	</header>
 	
 	<section>
-		<img src="images/aj_santi.jpg">
+		<img src="images/aj_santi.jpg" alt="BP Owners">
 		<h1> Blacklight Propaganda </h1>
 		<p> We are a company that focuses directly on attracting more customers to our 
 		clients' businesses through the proper advertisement techniques. Our company 
@@ -30,9 +30,23 @@
 		by Santiago Zabaleta and AJ Hill in mid 2010. </p>
 	</section>
 	
+	<aside>
+	
+		<h4>Our work includes:</h4>
+		<p>Layla Hookah Lounge (https://www.facebook.com/pages/Layla-Hookah-Lounge)</p>
+		<p>Tyler Boutelle (https://www.facebook.com/tyler.boutelle)</p>
+		<p>Il Primo Pizza and Wings Inc.</p>
+		<p>Electric Lazer Circu5 (https://www.facebook.com/ELCFRIENDS)</p>
+		<p>Moose House Live (https://www.facebook.com/swfledmscene)</p>
+		<p>United Supremacy </p>
+		<p>Crews Control</p>
+		<p>Jermaine Young (http://soundcloud.com/mryoung_lgnd)</p>
+		<p>DJ Scar (www.djscarmusic.com)</p>
+		<p>As well as ohter individuals and future partners!</p>
+	</aside>
+		
 	<footer>
 		<p> &copy;2009- 2012 Blacklight Propaganda, Inc. All Rights Reserved.</p>
 	</footer>
-	
 	</body>
 </html>
