added an orderd list index.html

--- a/index.html
+++ b/index.html
@@ -33,16 +33,18 @@
 	<aside>
 	
 		<h4>Our work includes:</h4>
-		<p>Layla Hookah Lounge (https://www.facebook.com/pages/Layla-Hookah-Lounge)</p>
-		<p>Tyler Boutelle (https://www.facebook.com/tyler.boutelle)</p>
-		<p>Il Primo Pizza and Wings Inc.</p>
-		<p>Electric Lazer Circu5 (https://www.facebook.com/ELCFRIENDS)</p>
-		<p>Moose House Live (https://www.facebook.com/swfledmscene)</p>
-		<p>United Supremacy </p>
-		<p>Crews Control</p>
-		<p>Jermaine Young (http://soundcloud.com/mryoung_lgnd)</p>
-		<p>DJ Scar (www.djscarmusic.com)</p>
-		<p>As well as ohter individuals and future partners!</p>
+		<ol>
+			<li>Layla Hookah Lounge (https://www.facebook.com/pages/Layla-Hookah-Lounge)</li>
+			<li>Tyler Boutelle (https://www.facebook.com/tyler.boutelle)</li>
+			<li>Il Primo Pizza and Wings Inc.</li>
+			<li>Electric Lazer Circu5 (https://www.facebook.com/ELCFRIENDS)</li>
+			<li>Moose House Live (https://www.facebook.com/swfledmscene)</li>
+			<li>United Supremacy </li>
+			<li>Crews Control</li>
+			<li>Jermaine Young (http://soundcloud.com/mryoung_lgnd)</li>
+			<li>DJ Scar (www.djscarmusic.com)</li>
+			<li>As well as ohter individuals and future partners!</li>
+		</ol>
 	</aside>
 		
 	<footer>
