added article element

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
 		</nav>
 	</header>
 		<h3> Contact Information </h3>
+	<article>
 		<p> Email: info@blacklightpropaganda.com</p>
 		<p>	Twitter: @BlklightPrpgnda</p>
 		<p>	Vimeo: vimeo.com/blacklightpropaganda</p>
@@ -24,7 +25,7 @@
 		<p>	Flickr: http://www.flickr.com/photos/62229868@N03/people/blacklightpropaganda/
 			& http://www.flickr.com/photos/ajhill/</p>
 		<p>	Instagram: @blacklightpropaganda</p>
-		
+	</article>	
 	
 	<footer>
 		<p> &copy;2009- 2012 Blacklight Propaganda, Inc. All Rights Reserved.</p>
