--- a/index.html
+++ b/index.html
@@ -30,8 +30,21 @@
 		by Santiago Zabaleta and AJ Hill in mid 2010. </p>
 	</section>
 	
+	<div>
+		<h2> Get your free quote for the following: </h2>
+		<ul>
+			<li> Flyers	</li>
+			<li> Business Cards	</li>
+			<li> Promo ads </li>
+			<li> Menus </li>
+			<li> Posters </li>
+			<li> Photography </li>
+			<li> Graphic Design </li>
+		</ul>
+		<p> Click here for your free quote now! </p>
+	</div>
+			
 	<aside>
-	
 		<h4>Our work includes:</h4>
 		<ol>
 			<li>Layla Hookah Lounge (https://www.facebook.com/pages/Layla-Hookah-Lounge)</li>
