addded all csss code

--- a/contact.html
+++ b/contact.html
@@ -3,18 +3,23 @@
 	<head>
 		<meta charset="utf-8" />
 		<title> Black Light Propaganda</title>
+	<link rel="stylesheet" href="css/main.css">
+	<link href='http://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
+
 	</head>
 	<body>
 	<header>
 		<img src="images/bplogo.jpg" alt="BP logo" title="BP logo"  width="100" height="100">
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
+				<li class="nav"><a href="index.html">Home</a></li>
+				<li class="nav"><a href="gallery.html">Gallery</a></li>
+				<li class="nav"><a href="contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
 	</header>
+	<div class="body">
 		<h3> Contact Information </h3>
 	<article>
 		<p> Email: info@blacklightpropaganda.com</p>
@@ -26,9 +31,10 @@
 			& http://www.flickr.com/photos/ajhill/</p>
 		<p>	Instagram: @blacklightpropaganda</p>
 	</article>	
+	</div>
 	
 	<footer>
-		<p> &copy;2009- 2012 Blacklight Propaganda, Inc. All Rights Reserved.</p>
+		<p id="footer"> &copy;2009- 2012 Blacklight Propaganda, Inc. All Rights Reserved.</p>
 	</footer>
 	
 	</body>
