--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
 	<head>
 		<meta charset="utf-8" />
 		<title> Black Light Propaganda</title>
+	<link rel="stylesheet" href="css/main.css">
+	<link href='http://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 	<header>
 		<img src="images/bplogo.jpg" alt="BP logo" title="BP logo" width="100" height="100">
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
+				<li class="nav"><a href="index.html">Home</a></li>
+				<li class="nav"><a href="gallery.html">Gallery</a></li>
+				<li class="nav"><a href="contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
 	</header>
-	
+	<div class="body">
 	<section>
-		<img src="images/aj_santi.jpg" alt="BP Owners">
+		<img id="ownerimg" src="images/aj_santi.jpg" alt="BP Owners">
 		<h1> Blacklight Propaganda </h1>
-		<p> We are a company that focuses directly on attracting more customers to our 
+		<p class="intropara"> We are a company that focuses directly on attracting more customers to our 
 		clients' businesses through the proper advertisement techniques. Our company 
 		specializes on: flyers, business cards, promotional ads, menus, posters, 
 		photography and almost anything you could think of that relates to graphic 
@@ -30,9 +33,9 @@
 		by Santiago Zabaleta and AJ Hill in mid 2010. </p>
 	</section>
 	
-	<div>
+	<div class="ctabody">
 		<h2> Get your free quote for the following: </h2>
-		<ul>
+		<ul id="cta">
 			<li> Flyers	</li>
 			<li> Business Cards	</li>
 			<li> Promo ads </li>
@@ -41,7 +44,7 @@
 			<li> Photography </li>
 			<li> Graphic Design </li>
 		</ul>
-		<p> Click here for your free quote now! </p>
+		<a href="#" class="quotebutton">Click Here For Free Quote!</a>
 	</div>
 			
 	<aside>
@@ -61,7 +64,7 @@
 	</aside>
 		
 	<footer>
-		<p> &copy;2009- 2012 Blacklight Propaganda, Inc. All Rights Reserved.</p>
+		<p id="footer"> &copy;2009- 2012 Blacklight Propaganda, Inc. All Rights Reserved.</p>
 	</footer>
 	</body>
 </html>
