--- a/gallery.html
+++ b/gallery.html
@@ -3,56 +3,61 @@
 	<head>
 		<meta charset="utf-8" />
 		<title> Black Light Propaganda</title>
+		<link rel="stylesheet" href="css/main.css">
+	<link href='http://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
+
 	</head>
 	<body>
 	<header>
 		<img src="images/bplogo.jpg" alt="BP logo" title="BP logo"  width="100" height="100">
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
+				<li class="nav"><a href="index.html">Home</a></li>
+				<li class="nav"><a href="gallery.html">Gallery</a></li>
+				<li class="nav"><a href="contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
 	</header>
-	
+	<div class="body">
 	<h2> ELC Shots </h2>
-	<ul>
-		<li><a href="images/elc1.jpg" title="ELC Pic!"><img 
+	<ul class="gallery">
+		<li class="galleryimg"><a class="imglink" href="images/elc1.jpg" title="ELC Pic!"><img 
    	 	src="images/elc1.jpg" alt="ELC Photo" width="130" height="100"></a></li>
-		<li><a href="images/elc2.jpg" title="ELC Pic!"><img
+		<li class="galleryimg"><a class="imglink" href="images/elc2.jpg" title="ELC Pic!"><img
 		src="images/elc2.jpg" alt="ELC Photo" width="130" height="100"></a></li>
-		<li><a href="images/elc3.jpg" title="ELC Pic!"><img
+		<li class="galleryimg"><a class="imglink" href="images/elc3.jpg" title="ELC Pic!"><img
 		src="images/elc3.jpg" alt="ELC Photo" width="130" height="100"></a></li>		
-		<li><a href="images/elc4.jpg" title="ELC Pic!"><img
+		<li class="galleryimg"><a class="imglink" href="images/elc4.jpg" title="ELC Pic!"><img
 		src="images/elc4.jpg" alt="ELC Photo" width="130" height="100"></a></li>		
-		<li><a href="images/elc5.jpg" title="ELC Pic!"><img
+		<li class="galleryimg"><a class="imglink" href="images/elc5.jpg" title="ELC Pic!"><img
 		src="images/elc5.jpg" alt="ELC Photo" width="130" height="100"></a></li>
 	</ul>
 	<h2> Car Shots </h2>
-	<ul>
-		<li><a href="images/carshot1.jpg" title="Car Shot!"><img
+	<ul class="gallery">
+		<li class="galleryimg"><a class="imglink" href="images/carshot1.jpg" title="Car Shot!"><img
 		src="images/carshot1.jpg" alt="Car Shot" width="130" height="100"></a></li>
-		<li><a href="images/carshot2.jpg" title="Car Shot!"><img
+		<li class="galleryimg"><a class="imglink" href="images/carshot2.jpg" title="Car Shot!"><img
 		src="images/carshot2.jpg" alt="Car Shot" width="130" height="100"></a></li>
-		<li><a href="images/carshot3.jpg" title="Car Shot!"><img
+		<li class="galleryimg"><a class="imglink" href="images/carshot3.jpg" title="Car Shot!"><img
 		src="images/carshot3.jpg" alt="Car Shot" width="130" height="100"></a></li>
-		<li><a href="images/carshot4.jpg" title="Car Shot!"><img
+		<li class="galleryimg"><a class="imglink" href="images/carshot4.jpg" title="Car Shot!"><img
 		src="images/carshot4.jpg" alt="Car Shot" width="130" height="100"></a></li>
-		<li><a href="images/carshot5.jpg" title="Car Shot!"><img
-		src="images/carshot5.jpg" alt="Car Shot" width="140" height="100"></a></li>
+		<li class="galleryimg"><a class="imglink" href="images/carshot5.jpg" title="Car Shot!"><img
+		src="images/carshot5.jpg" alt="Car Shot" width="130" height="100"></a></li>
 	</ul>
 	<h2> Flyer Designs </h2>
-	<ul>
-		<li><a href="images/flyer1.jpg" title="Flyer Design!"><img
+	<ul class="gallery">
+		<li class="galleryimg"><a class="imglink2" href="images/flyer1.jpg" title="Flyer Design!"><img
 		src="images/flyer1.jpg" alt="Flyer Design" width="100" height="120"></a></li>
-		<li><a href="images/flyer2.jpg" title="Flyer Design!"><img
+		<li class="galleryimg"><a class="imglink2" href="images/flyer2.jpg" title="Flyer Design!"><img
 		src="images/flyer2.jpg" alt="Flyer Design" width="100" height="120"></a></li>
-		<li><a href="images/flyer3.jpg" title="Flyer Design!"><img
+		<li class="galleryimg"><a class="imglink2" href="images/flyer3.jpg" title="Flyer Design!"><img
 		src="images/flyer3.jpg" alt="Flyer Design" width="100" height="120"></a></li>
 	</ul>
+	</div>
 	<footer>
-		<p> &copy;2009- 2012 Blacklight Propaganda, Inc. All Rights Reserved.</p>
+		<p id="footer"> &copy;2009- 2012 Blacklight Propaganda, Inc. All Rights Reserved.</p>
 	</footer>
 	
 	</body>
