responsive code added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 	<header>
-		<img src="images/bplogo.jpg" alt="BP logo" title="BP logo" width="100" height="100">
+		<img class="bplogo" src="images/bplogo.jpg" alt="BP logo" title="BP logo" width="100" height="100">
 		<nav>
 			<ul>
 				<li class="nav"><a href="index.html">Home</a></li>
