added form table and new page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<li> Photography </li>
 			<li> Graphic Design </li>
 		</ul>
-		<a href="#" class="quotebutton">Click Here For Free Quote!</a>
+		<a href="quotes.html" class="quotebutton">Click Here For Free Quote!</a>
 	</div>
 			
 	<aside>
